syntax = "proto3";

package wkt_plain;

option go_package = "xgo/tests/pb/pbformat";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

//import "tests/proto/module/external.proto";

import "tests/proto/cases/format/private.proto";

import "proto/json.proto";

message WKTPlain1 {
  // Cases for Enum
  //
  private.Enum1 f_enum_number1 = 1 [ (json.field) = {
    format: { enum: { codec: Numeric } }
  } ];
  private.Enum1 f_enum_number_string1 = 2 [ (json.field) = {
    format: { enum: { codec: NumericString } }
  } ];
  private.Enum1 f_enum_string1 = 3 [ (json.field) = {
    format: { enum: { codec: EnumString } }
  } ];

  // Cases for google.protobuf.Any
  //
  google.protobuf.Any f_any_native1 = 4 [ (json.field) = {
    format: { any: { codec: Object } }
  } ];
  google.protobuf.Any f_any_proto1  = 5 [ (json.field) = {
    format: { any: { codec: Proto } }
  } ];

  // Cases for google.protobuf.Duration
  //
  google.protobuf.Duration f_duration_native1 = 11 [ (json.field) = {
    format: { duration: { codec: Object } }
  } ];
  google.protobuf.Duration f_duration_string1 = 12 [ (json.field) = {
    format: { duration: { codec: TimeString } }
  } ];

  google.protobuf.Duration f_duration_nanosecond1 = 13 [ (json.field) = {
    format: { duration: { codec: Nanosecond } }
  } ];
  google.protobuf.Duration f_duration_nanosecond_string1 = 14 [ (json.field) = {
    format: { duration: { codec: NanosecondString } }
  } ];

  google.protobuf.Duration f_duration_microsecond1 = 15 [ (json.field) = {
    format: { duration: { codec: Microsecond } }
  } ];
  google.protobuf.Duration f_duration_microsecond_string1 = 16 [ (json.field) = {
    format: { duration: { codec: MicrosecondString } }
  } ];

  google.protobuf.Duration f_duration_millisecond1 = 17 [ (json.field) = {
    format: { duration: { codec: Millisecond } }
  } ];
  google.protobuf.Duration f_duration_millisecond_string1 = 18 [ (json.field) = {
    format: { duration: { codec: MillisecondString } }
  } ];

  google.protobuf.Duration f_duration_second1 = 19 [ (json.field) = {
    format: { duration: { codec: Second } }
  } ];
  google.protobuf.Duration f_duration_second_string1 = 20 [ (json.field) = {
    format: { duration: { codec: SecondString } }
  } ];

  google.protobuf.Duration f_duration_minute1 = 21 [ (json.field) = {
    format: { duration: { codec: Minute } }
  } ];
  google.protobuf.Duration f_duration_minute_string1 = 22 [ (json.field) = {
    format: { duration: { codec: MinuteString } }
  } ];

  google.protobuf.Duration f_duration_hour1 = 23 [ (json.field) = {
    format: { duration: { codec: Hour } }
  } ];
  google.protobuf.Duration f_duration_hour_string1 = 24 [ (json.field) = {
    format: { duration: { codec: HourString } }
  } ];

  // Cases for google.protobuf.Timestamp
  //
  google.protobuf.Timestamp f_timestamp_native1 = 31 [ (json.field) = {
    format: { timestamp: { codec: Object } }
  } ];
  google.protobuf.Timestamp f_timestamp_time_layout1 = 32 [ (json.field) = {
    format: { timestamp: { codec: TimeLayout, layout: { golang: "2006-01-02T15:04:05Z07:00" } } }
  } ];

  google.protobuf.Timestamp f_timestamp_unix_nano1 = 33 [ (json.field) = {
    format: { timestamp: { codec: UnixNano } }
  } ];
  google.protobuf.Timestamp f_timestamp_unix_nano_string1 = 34 [ (json.field) = {
    format: { timestamp: { codec: UnixNanoString } }
  } ];

  google.protobuf.Timestamp f_timestamp_unix_micro1 = 35 [ (json.field) = {
    format: { timestamp: { codec: UnixMicro } }
  } ];
  google.protobuf.Timestamp f_timestamp_unix_micro_string1 = 36 [ (json.field) = {
    format: { timestamp: { codec: UnixMicroString } }
  } ];

  google.protobuf.Timestamp f_timestamp_unix_milli1 = 37 [ (json.field) = {
    format: { timestamp: { codec: UnixMilli } }
  } ];
  google.protobuf.Timestamp f_timestamp_unix_milli_string1 = 38 [ (json.field) = {
    format: { timestamp: { codec: UnixMilliString } }
  } ];

  google.protobuf.Timestamp f_timestamp_unix_sec1 = 39 [ (json.field) = {
    format: { timestamp: { codec: UnixSec } }
  } ];
  google.protobuf.Timestamp f_timestamp_unix_sec_string1 = 40 [ (json.field) = {
    format: { timestamp: { codec: UnixSecString } }
  } ];
}
